<resources>
    <string name="app_name">GND_LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="starter_project_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="completed">Completed</string>
    <string name="paused">Paused</string>
    <string name="unique_channel_id">unique_channel_id</string>
    <string name="channel_name">Downloads</string>
    <string name="channel_description">Notification channel for the downloads</string>
    <string name="please_select_a_repo">Please select a repository first to download</string>
    <string name="ok">OK</string>
    <string name="status_label">Status:</string>
    <string name="file_name_label">File Name:</string>
    <string name="download">Download</string>
    <string name="no_app_to_display">No handler for this type of file.</string>
    <string name="view_download">View download</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="custom_url_to_download">Custom url to download</string>
    <string name="use_other_url">Use url from the editText below</string>
    <string name="url_is_not_valid">%s Url is not valid, please type another</string>
    <string name="error_placeholder">Error</string>
</resources>
