<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/fl_main_container"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_height="220dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_assistant_black_24dp"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <RadioGroup
                android:id="@+id/rg_main"
                android:layout_width="0dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                app:layout_constraintTop_toBottomOf="@+id/fl_main_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_glide"
                    android:text="@string/glide_url"
                    android:textSize="@dimen/default_text_size"
                    android:padding="@dimen/radio_buttons_padding"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_project"
                    android:padding="@dimen/radio_buttons_padding"
                    android:text="@string/starter_project_url"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_retrofit"
                    android:textSize="@dimen/default_text_size"
                    android:text="@string/retrofit_url"
                    android:padding="@dimen/radio_buttons_padding"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_custom"
                    android:textSize="@dimen/default_text_size"
                    android:text="@string/use_other_url"
                    android:padding="@dimen/radio_buttons_padding"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <EditText
                app:layout_constraintTop_toBottomOf="@+id/rg_main"
                app:layout_constraintBottom_toTopOf="@+id/custom_button"
                android:id="@+id/et_custom_url"
                android:inputType="textUri"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:hint="@string/custom_url_to_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.udacity.LoadingButton
                android:id="@+id/custom_button"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                app:rect_backgroundColor="@color/colorPrimary"
                app:rect_foregroundColor="@color/colorPrimaryDark"
                app:circleColor="@color/colorAccent"
                app:labelColor="@color/white"
                app:label="@string/button_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.9"
                app:layout_constraintTop_toBottomOf="@+id/et_custom_url" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>