<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        app:layoutDescription="@xml/detail_screen_animations"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/file_name_label"
            android:textColor="@color/colorPrimaryDarkGray"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/file_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="File name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name"
            android:layout_marginTop="12dp"
            android:id="@+id/bt_view_file"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/view_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_label"
            android:textColor="@color/colorPrimaryDarkGray"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/status"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/status" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_marginTop="26dp"
            android:layout_height="wrap_content"
            tools:text="Status"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/bt_view_file" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="179dp" />

        <Button
            android:id="@+id/bt_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/ok"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>